# GLV

./: .gitignore  CMakeLists.txt  COPYRIGHT  GLV.rb  Makefile  Makefile.common  Makefile.config  README  README.md  attachVariable.cpp  config.mk  distclean
GLV/: glv.h  glv_behavior.h  glv_binding.h  glv_buttons.h  glv_color.h  glv_color_controls.h  glv_conf.h  glv_core.h  glv_draw.h  glv_font.h  glv_grid.h  glv_layout.h  glv_model.h  glv_notification.h  glv_observer_pattern.h  glv_plots.h  glv_preset_controls.h  glv_rect.h  glv_sliders.h  glv_sono.h  glv_texture.h  glv_textview.h  glv_util.h  glv_view3D.h  glv_widget.h
bjam/: Jamroot
bjam/lib/: Jamfile
bjam/test/: Jamfile
doc/: Doxyfile  GLV_Diagrams.graffle  VectorFont.graffle  design.txt  todo
example/: chladni.cpp  dataPlot.cpp  densityPlot.cpp  drawText.cpp  exDensityPlot.cpp  exNotification.cpp  exPresetView.cpp  exPresets.cpp  exStretchAnchor.cpp  exWidget.cpp  example.h  grid.cpp  icons.cpp  mandelbrot.cpp  paintDiffusion.cpp  paintSimple.cpp  paintWave.cpp  presets.cpp  scope.cpp  showcase.cpp  soaring.cpp  spaceCurve.cpp  spinSynth.cpp  tableLayout.cpp  views.cpp  widget.cpp  widgets.cpp
examples/: dataPlot.cpp  drawText.cpp  graphicsData.cpp  grid.cpp  scope.cpp  showcase.cpp  slidersWithValues.cpp  soaring.cpp  spaceCurve.cpp  spinSynth.cpp  stretchAnchor.cpp  textureView.cpp
include/: glv.h  glv_abstract_binding.h  glv_behavior.h  glv_binding.h  glv_binding_carbon.h  glv_binding_fltk.h  glv_binding_glut.h  glv_buttons.h  glv_color.h  glv_color_controls.h  glv_conf.h  glv_core.h  glv_draw.h  glv_font.h  glv_grid.h  glv_icon.h  glv_layout.h  glv_model.h  glv_observer_pattern.h  glv_pen.h  glv_pimpl_binding.h  glv_plots.h  glv_preset_controls.h  glv_rect.h  glv_sliders.h  glv_texture.h  glv_textview.h  glv_util.h  glv_view3D.h  glv_widget copy.h  glv_widget.h
iphone/: MainWindow.xib  glv_Prefix.pch  main.m
luaglv/Lua/: lapi.c  (+52 more)
osx/: GLV_APPL-Info.plist  GLV_FMWK-Info.plist
src/: glv_abstract_binding.cpp  glv_binding.cpp  glv_binding_carbon.cpp  glv_binding_fltk.cpp  glv_binding_glut.cpp  glv_buttons.cpp  glv_color.cpp  glv_color_controls.cpp  glv_core.cpp  glv_draw.cpp  glv_font.cpp  glv_glv.cpp  glv_grid.cpp  glv_inputdevice.cpp  glv_layout.cpp  glv_model.cpp  glv_notification.cpp  glv_pimpl_binding.cpp  glv_pimpl_binding_glut.cpp  glv_plots.cpp  glv_preset_controls.cpp  glv_sliders.cpp  glv_sono.cpp  glv_texture.cpp  glv_textview.cpp  glv_util.cpp  glv_view.cpp  glv_view3D.cpp  glv_widget.cpp
test/: Makefile  config.mk  test_events.cpp  test_examples.cpp  test_glv.cpp  test_glv.h  test_icon.cpp  test_multi_window.cpp  test_notifications.cpp  test_signals.cpp  test_text.cpp  test_traversal.cpp  test_units.cpp  test_widgets.cpp  test_window.cpp
www/: index.html  style.css
(+380 files in other folders)
